    In Linux/macOS SDL1 builds only the read access is
    supported whereas Linux/macOS SDL2 builds support
    both read and write accesses. (Wengier)
  - Added a simple BIOS Setup Utlity, which will show
    a summary of the current system configuration and
    allow users to change the date and time. Press Del
    key at the BIOS boot screen to enter. (Wengier)
  - Added experimental option to load a VGA BIOS ROM
    image and execute it, instead of our own INT 10h
    emulation. If enabled, it will load the specific
    ROM file into C000:0000. If not specified, it
    will choose based on machine type. VGA BIOS ROM
    images (e.g. et4000.bin for Tseng ET4000 emulation)
    can be dumped from real hardware or downloaded from
    the PCem ROMs collection. It can be set with config
    option "vga bios rom image" in [video] section.
  - Improved handling for file- and record-locking
    for non-Windows platforms. Portions of the code
    are adopted from DOSEmu. (Wengier)
  - Fixed PC-98 keyboard handling of CTRL+A through
    CTRL+Z. CTRL+C now works correctly in PC-98 mode.
  - You can now press Ctrl+C or Ctrl+Break to break
    from long outputs from commands like COPY, TYPE,
    DIR /S, and ATTRIB /S. (Wengier)
  - Renamed MEM.COM to MEM.EXE to match DOS. (Wengier)
  - Rewrote built-in TREE command instead of the one
    from FreeDOS to support long filenames. (Wengier)
  - DELTREE is now an external command appearing on
    drive Z: as DELTREE.EXE instead of a builtin shell
    command, since it is an external command in a real
    DOS system. (Wengier)
  - Added REPLACE command to replace files, resembling
    the MS-DOS counterpart. This command is compiled
    with long filename support. (Wengier)
  - Added PUSHD and POPD commands so that you can store
    the current directory and changes to the specified
    directory (optionally also the current drive), then
    changes the directory/drive back. PUSHD command