@@ -53,6 +53,7 @@
 #                      Possible values: true, false, auto.
 #DOSBOX-X-ADV:#          overscan: Width of overscan border (0 to 10). (works only if output=surface)
 #          titlebar: Change the string displayed in the DOSBox-X title bar.
+#         showbasic: If set, DOSBox-X will show basic information including the DOSBox-X version number and current running speed in the title bar.
 #       showdetails: If set, DOSBox-X will show the cycles count (FPS) and emulation speed relative to realtime in the title bar.
 #          showmenu: Whether to show the menu bar (if supported). Default true.
 fullscreen        = false
@@ -78,6 +79,7 @@ mapperfile        = mapper-dosbox-x.map
 usescancodes      = auto
 #DOSBOX-X-ADV:overscan          = 0
 titlebar          = 
+showbasic         = true
 showdetails       = false
 showmenu          = true
 
