@@ -48,6 +48,7 @@
 #                      If set to "auto" (default), it is enabled for SDL1 and non-US keyboards.
 #                      Possible values: true, false, auto.
 #          titlebar: Change the string displayed in the DOSBox-X title bar.
+#         showbasic: If set, DOSBox-X will show basic information including the DOSBox-X version number and current running speed in the title bar.
 #       showdetails: If set, DOSBox-X will show the cycles count (FPS) and emulation speed relative to realtime in the title bar.
 #          showmenu: Whether to show the menu bar (if supported). Default true.
 fullscreen        = false
@@ -69,6 +70,7 @@ priority          = higher,normal
 mapperfile        = mapper-dosbox-x.map
 usescancodes      = auto
 titlebar          = 
+showbasic         = true
 showdetails       = false
 showmenu          = true
 
